# cs470-krAB

./: .gitignore  .nfs00000000ea0de11d00005327  ANSWERS  CLUSTER_REF.md  Cargo.toml  README.md  build-and-run.sh  collect_results.sh  compareall.sh  debug.out  runExample.sh  run_in_salloc.sh  run_mpi_docker.sh  runoutput.txt  salloc_mpi.sh  time_results.txt
BUILD_MPI/: .rustc_info.json
docs/: AGENT_DOCKER_TEST_PLAYBOOK.md  AGENT_WORKFLOW.md  DELIVERY_CHECKLIST.md  EOD_STATUS_2026-04-01.md  METRICS_SCHEMA.md  MPI_DESIGN.md  MPI_DOCKER_USAGE.md
examples/: Cargo.toml  LIFE_EVENTS.md  README.md  config.json  config_comprehensive.json  financial_mpi.rs  financial_mpi_parallel.rs  (+2 more)
examples/financial_life_exploration/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  demo.sh  explain_best_run.sh  finance_life_explain_report.txt  financial_interpretation.txt  plotcsv.py  run_strong_scaling.sh  run_weak_scaling.sh  runsim.sh  scaling_results.csv  scaling_results_detailed.csv
examples/financial_life_exploration/outcomes/: financial_interpretation_64_procs.txt
examples/financial_life_exploration/plots/strongres/: scaling_strongrun_256_procs.log.fail
examples/financial_life_exploration/scale-weak-res/: scaling_results_detailed.csv
examples/financial_life_exploration/src/: main.rs
examples/financial_life_exploration/src/model/: household.rs  mod.rs  report.rs  state.rs
examples/financial_life_exploration/strongres/: parsetocsv.py  scaling_results_detailed.csv
examples/financial_life_exploration/tools/: demo_day_summary.py  interpret_financial_run.py
(+453 files in other folders)
